# paddleocr-fastapi

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  download_models.py  pyproject.toml
app/: config.py  logging_setup.py  main.py  ocr_engine.py  ocr_service.py  schemas.py
app/routers/: docs.py  health.py  ocr.py
tests/: conftest.py  test_health.py  test_ocr.py  test_ocr_service.py
