[project]
name = "fast-api-ocr"
version = "0.1.0"
description = "OCR API service backed by PaddleOCR."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.137.1",
    "uvicorn==0.49.0",
    "paddleocr==3.7.0",
    "onnxruntime==1.27.0",
    "opencv-python-headless==4.13.0.92",
    "pillow==12.2.0",
    "numpy==2.3.5",
    "python-multipart==0.0.32",
    "structlog==26.1.0",
    "pydantic-settings>=2.6.0",
    "scalar-fastapi>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.380",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: tests that load the OCR engine and run inference (skipped by default)",
]
addopts = "-m 'not slow' --cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py", "app/routers/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
# B008: FastAPI idiomatically uses File/Depends/Query as default values.
extend-ignore = ["B008"]

[tool.pyright]
include = ["app"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
